<resources>
    <string name="app_name">memory_math</string>
    <string name="add_test">Add Test</string>
    <string name="display_db_test">Display DB test</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="signup">Signup</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="statistics">statistics</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="modes">Modes</string>
    <string name="start">Start</string>
    <string name="let_s_play">Let\'s Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_text">test text</string>
    <string name="answer_here">answer here</string>
    <string name="what_was_the_total">what was the total</string>
    <string name="done">Done</string>
    <string name="score">score</string>
    <string name="speed">Speed</string>
    <string name="shake_to_play">Shake To Play</string>
</resources>