<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.ModeSelector">


    <TextView
        android:id="@+id/title_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modes"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_mode_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/easy" />

            <Button
                android:id="@+id/button_mode_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

            <Button
                android:id="@+id/button_mode_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Highscore_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/highscore_0" />

            <TextView
                android:id="@+id/Highscore_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/highscore_0" />

            <TextView
                android:id="@+id/Highscore_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/highscore_0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/statistics" />

        <Button
            android:id="@+id/button_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>